--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,9 @@
-controller: 'users', action: 'edit'
+<h1>Редактирование</h1>
+
+<%= render 'form' %>
+<%= link_to(@user) do %>
+  <i class='icon-user' title='Показать'></i>
+<% end %>&nbsp
+<%= link_to(users_path) do %>
+  <i class='icon-arrow-left' title='Назад'></i>
+<% end %>
