--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,6 +12,8 @@
     <%= link_to 'Пользователи', users_path %>
   <li>
     <%= link_to 'Группы', groups_path %>
+  <li>
+    <%= link_to 'Подразделения', divisions_path %>
 </ul>
 <div class="container">
 <%= yield %>
