--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,8 +3,10 @@
 <head>
   <title>IsmaAdmin</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 <ul class="nav nav-tabs">
@@ -16,6 +18,7 @@
     <%= link_to 'Подразделения', divisions_path %>
 </ul>
 <div class="container">
+<div id="map" style="width: 100%; height: 200px"></div>
 <%= yield %>
 </div>
 </body>
