--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,8 +38,7 @@
       <strong>
 	<%= @profile.full_name %>
       </strong>
-      <%= "- #{@profile.degree.short_name}" if @profile.degree %>
-      <%= ", #{@profile.academic_title}" if @profile.academic_title %>
+      <%= [@profile.degree.short_name, @profile.academic_title].compact.join(', ') %>
     <% end %>
     <% @user.posts.each do |p| %>
       <p>
